--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
   font-family: "Inter", sans-serif;
   font-size: var(--g16);
   background-color: #ededed;
+  transition: all 0.3s;
 }
 
 a {
@@ -27,7 +28,7 @@ a {
 }
 
 a:hover {
-  opacity: 0.8;
+  text-decoration: underline;
 }
 
 .bold {
@@ -61,6 +62,9 @@ button {
 .grid-center {
   display: grid;
   place-content: center;
+}
+
+.input-fields {
   gap: var(--g16);
 }
 
@@ -73,6 +77,11 @@ button {
   gap: var(--g8);
 }
 
+.input-field:hover {
+  border: 1px solid #000;
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.1);
+}
+
 .input-field input {
   max-width: 95%;
   padding: var(--g8);
@@ -83,6 +92,10 @@ button {
   padding: var(--g8);
   background-color: #000;
   color: #fff;
+}
+
+.submit-btn:hover {
+  background-color: #222;
 }
 
 .other {
